Added solutions for 1.1, 1.2 and 2.3 👧

--- a/exercise1/exercise.ipynb
+++ b/exercise1/exercise.ipynb
@@ -34,6 +34,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Solution\n",
+    "\n",
+    "Let $\\alpha \\in \\mathbb{F}, q \\in \\mathbb{F}^{(1,I)}, z \\in \\mathbb{F}^{(1,K)}, X \\in \\mathbb{F}^{(I,J)}, Y \\in \\mathbb{F}^{(J,K)}$, where $I$,$J$,$K \\in \\mathbb{N}$.\n",
+    "\n",
+    "Then, $g=\\alpha q X Y z^T = \\alpha \\cdot\\left(\\begin{array}{lll}q_{1} & \\ldots & q_{I}\\end{array}\\right) \\cdot\\left(\\begin{array}{lll}x_{11} & \\ldots & x_{1 J} \\\\ \\ldots & \\ldots & \\ldots \\\\ x_{I 1} & \\ldots & x_{I J}\\end{array}\\right) \\cdot\\left(\\begin{array}{lll}y_{11} & \\ldots & y_{1 K} \\\\ \\ldots & \\ldots & \\ldots \\\\ y_{J 1} & \\ldots & y_{J K}\\end{array}\\right) \\cdot\\left(\\begin{array}{l}z_{1} \\\\ \\ldots \\\\ z_{K}\\end{array}\\right)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1.2) Derive Ridge Regression Weights (4 Points)\n",
     "Derive the optimal solution of weights in Ridge Regression using matrix form, i\n",
     ".e. $\\boldsymbol{w}= ?$\n",
@@ -43,7 +54,15 @@
     "\n",
     "\\begin{align*}\n",
     "L &= (\\boldsymbol{y}-\\boldsymbol{\\Phi} \\boldsymbol{w})^T(\\boldsymbol{y}-\\boldsymbol{\\Phi} \\boldsymbol{w}) + \\lambda \\boldsymbol{w}^T \\boldsymbol{I} \\boldsymbol{w}. \\\\\n",
-    "\\end{align*}\n"
+    "\\end{align*}\n",
+    "\n",
+    "**Solution**\n",
+    "\\begin{align*}\n",
+    "L=\\boldsymbol{w}^{T} \\boldsymbol{\\Phi}^{T} \\boldsymbol{\\Phi}\\boldsymbol{w}+y^{T} \\boldsymbol{y} -2 \\boldsymbol{y}^{T} \\boldsymbol{\\Phi}\\boldsymbol{w}+\\lambda\\boldsymbol{w}^{T} I\\boldsymbol{w} \\\\\n",
+    "\\frac{\\partial L}{\\partial\\boldsymbol{w}}=2 \\boldsymbol{\\Phi}^{T} \\boldsymbol{\\Phi}\\boldsymbol{w}-2 \\boldsymbol{y}^{T} \\boldsymbol{\\Phi}+2 \\lambda\\boldsymbol{w} \\stackrel{!}{=} 0 \\\\\n",
+    "\\Longleftrightarrow\\left(\\boldsymbol{\\Phi}^{T} \\boldsymbol{\\Phi}+\\lambda I\\right)\\boldsymbol{w}=\\boldsymbol{y}^{T} \\boldsymbol{\\Phi} \\\\\n",
+    "\\Longleftrightarrow\\boldsymbol{w}=\\left(\\boldsymbol{\\Phi}^{T} \\boldsymbol{\\Phi}+\\lambda I\\right)^{-1} \\boldsymbol{\\Phi}^{T} \\boldsymbol{y}\n",
+    "\\end{align*}"
    ]
   },
   {
@@ -721,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "We implicitely assumed that the training data can be modelled using a multivariate Gaussian distribution. Might be problematic, when a strong skew or kurtosis is present. \n"
    ]
   },
   {
